--- a/day28-column-transformer/day28.ipynb
+++ b/day28-column-transformer/day28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "4   65  Female  101.0  Mild   Mumbai        No"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,20 +204,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>81</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>101.0</td>\n",
+       "      <th>82</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>98.0</td>\n",
        "      <td>Mild</td>\n",
-       "      <td>Mumbai</td>\n",
+       "      <td>Kolkata</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>80</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>Mild</td>\n",
-       "      <td>Bangalore</td>\n",
+       "      <th>27</th>\n",
+       "      <td>33</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Delhi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -228,28 +228,12 @@
        "      <td>Kolkata</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>27</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>Mild</td>\n",
-       "      <td>Kolkata</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>26</td>\n",
+       "      <th>72</th>\n",
+       "      <td>83</td>\n",
        "      <td>Female</td>\n",
-       "      <td>98.0</td>\n",
+       "      <td>101.0</td>\n",
        "      <td>Mild</td>\n",
        "      <td>Kolkata</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -260,36 +244,52 @@
        "      <td>Delhi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>Strong</td>\n",
-       "      <td>Kolkata</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>84</td>\n",
-       "      <td>Female</td>\n",
+       "      <th>91</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Male</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Mild</td>\n",
-       "      <td>Bangalore</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>49</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>102.0</td>\n",
        "      <td>Mild</td>\n",
        "      <td>Delhi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>42</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>34</th>\n",
+       "      <td>74</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Mumbai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>47</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>101.0</td>\n",
        "      <td>Strong</td>\n",
        "      <td>Bangalore</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>65</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>82</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Kolkata</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -298,22 +298,22 @@
       ],
       "text/plain": [
        "    age  gender  fever   cough       city\n",
-       "55   81  Female  101.0    Mild     Mumbai\n",
-       "76   80    Male  100.0    Mild  Bangalore\n",
+       "82   24    Male   98.0    Mild    Kolkata\n",
+       "27   33  Female  102.0  Strong      Delhi\n",
        "22   71  Female   98.0  Strong    Kolkata\n",
-       "93   27    Male  100.0    Mild    Kolkata\n",
-       "33   26  Female   98.0    Mild    Kolkata\n",
-       "..  ...     ...    ...     ...        ...\n",
+       "72   83  Female  101.0    Mild    Kolkata\n",
        "2    42    Male  101.0    Mild      Delhi\n",
-       "51   11  Female  100.0  Strong    Kolkata\n",
-       "5    84  Female    NaN    Mild  Bangalore\n",
-       "40   49  Female  102.0    Mild      Delhi\n",
-       "19   42  Female    NaN  Strong  Bangalore\n",
+       "..  ...     ...    ...     ...        ...\n",
+       "91   38    Male    NaN    Mild      Delhi\n",
+       "34   74    Male  102.0    Mild     Mumbai\n",
+       "87   47    Male  101.0  Strong  Bangalore\n",
+       "81   65    Male   99.0    Mild      Delhi\n",
+       "41   82    Male    NaN    Mild    Kolkata\n",
        "\n",
        "[80 rows x 5 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "(80, 1)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "(80, 1)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -394,14 +394,14 @@
        "(80, 4)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# OneHotEncoding -> gender,city\n",
-    "ohe = OneHotEncoder(drop='first',sparse=False)\n",
+    "ohe = OneHotEncoder(drop='first',sparse_output=False)\n",
     "X_train_gender_city = ohe.fit_transform(X_train[['gender','city']])\n",
     "\n",
     "# also the test data\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "(80, 1)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "(80, 7)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
