--- a/day29-sklearn-pipelines/predict-using-pipeline.ipynb
+++ b/day29-sklearn-pipelines/predict-using-pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,26 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assume user input\n",
-    "test_input2 = np.array([2, 'male', 31.0, 0, 0, 10.5, 'S'],dtype=object).reshape(1,7)"
+    "test_input2 = np.array([1, 'female', 38.0, 1, 0, 71.2833, 'C'],dtype=object).reshape(1,7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Dark_Coder\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SimpleImputer was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Dark_Coder\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SimpleImputer was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([0], dtype=int64)"
+       "array([1], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
