--- a/day34-handling-date-and-time/working-with-dates-and-time.ipynb
+++ b/day34-handling-date-and-time/working-with-dates-and-time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4  2019-01-06        4344       25       3"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4  2013-10-26 23:11:00    Зая я тебя никогда не обижу  люблю тебя!)  Даше"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,44 +326,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>2018-11-21</td>\n",
-       "      <td>192</td>\n",
-       "      <td>23</td>\n",
+       "      <th>812</th>\n",
+       "      <td>2019-03-28</td>\n",
+       "      <td>1719</td>\n",
+       "      <td>2</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>2019-12-11</td>\n",
+       "      <td>2860</td>\n",
+       "      <td>28</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>728</th>\n",
+       "      <td>2019-11-07</td>\n",
+       "      <td>6531</td>\n",
+       "      <td>26</td>\n",
        "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>6371</td>\n",
-       "      <td>7</td>\n",
-       "      <td>22</td>\n",
        "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>871</th>\n",
-       "      <td>2018-12-26</td>\n",
-       "      <td>7378</td>\n",
-       "      <td>21</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2018</td>\n",
+       "      <th>214</th>\n",
+       "      <td>2019-06-30</td>\n",
+       "      <td>453</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>841</th>\n",
-       "      <td>2019-11-17</td>\n",
-       "      <td>5250</td>\n",
-       "      <td>3</td>\n",
+       "      <th>982</th>\n",
+       "      <td>2019-06-22</td>\n",
+       "      <td>354</td>\n",
        "      <td>13</td>\n",
+       "      <td>2</td>\n",
        "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>2018-10-05</td>\n",
-       "      <td>1288</td>\n",
-       "      <td>20</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2018</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -371,14 +371,14 @@
       ],
       "text/plain": [
        "          date  product_id  city_id  orders  date_year\n",
-       "202 2018-11-21         192       23       1       2018\n",
-       "999 2019-10-15        6371        7      22       2019\n",
-       "871 2018-12-26        7378       21       8       2018\n",
-       "841 2019-11-17        5250        3      13       2019\n",
-       "235 2018-10-05        1288       20      22       2018"
+       "812 2019-03-28        1719        2      79       2019\n",
+       "48  2019-12-11        2860       28      41       2019\n",
+       "728 2019-11-07        6531       26       1       2019\n",
+       "214 2019-06-30         453       16       2       2019\n",
+       "982 2019-06-22         354       13       2       2019"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "4 2019-01-06        4344       25       3       2019              1"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "4         January  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "4         January         6  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "4         January         6         6  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "4        Sunday  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
        "4        Sunday                1  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1246,13 +1246,13 @@
        "4        Sunday                1          1  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "date['date_week'] = date['date'].dt.week\n",
+    "date['date_week'] = date['date'].dt.isocalendar().week\n",
     "\n",
     "date.drop(columns=['product_id','city_id','orders']).head()"
    ]
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
        "4        Sunday                1          1        1  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1536,7 @@
        "4        Sunday                1          1        1         1  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,16 +1556,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 4, 21, 16, 2, 16, 791379)"
+       "datetime.datetime(2024, 10, 20, 15, 52, 32, 423669)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,27 +1580,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     498 days 16:02:16.791379\n",
-       "1     980 days 16:02:16.791379\n",
-       "2     911 days 16:02:16.791379\n",
-       "3     613 days 16:02:16.791379\n",
-       "4     836 days 16:02:16.791379\n",
-       "                ...           \n",
-       "995   926 days 16:02:16.791379\n",
-       "996   867 days 16:02:16.791379\n",
-       "997   715 days 16:02:16.791379\n",
-       "998   780 days 16:02:16.791379\n",
-       "999   554 days 16:02:16.791379\n",
+       "0     1776 days 15:52:32.423669\n",
+       "1     2258 days 15:52:32.423669\n",
+       "2     2189 days 15:52:32.423669\n",
+       "3     1891 days 15:52:32.423669\n",
+       "4     2114 days 15:52:32.423669\n",
+       "                 ...           \n",
+       "995   2204 days 15:52:32.423669\n",
+       "996   2145 days 15:52:32.423669\n",
+       "997   1993 days 15:52:32.423669\n",
+       "998   2058 days 15:52:32.423669\n",
+       "999   1832 days 15:52:32.423669\n",
        "Name: date, Length: 1000, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,27 +1611,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      498\n",
-       "1      980\n",
-       "2      911\n",
-       "3      613\n",
-       "4      836\n",
-       "      ... \n",
-       "995    926\n",
-       "996    867\n",
-       "997    715\n",
-       "998    780\n",
-       "999    554\n",
+       "0      1776\n",
+       "1      2258\n",
+       "2      2189\n",
+       "3      1891\n",
+       "4      2114\n",
+       "       ... \n",
+       "995    2204\n",
+       "996    2145\n",
+       "997    1993\n",
+       "998    2058\n",
+       "999    1832\n",
        "Name: date, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,27 +1642,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      16.0\n",
-       "1      32.0\n",
-       "2      30.0\n",
-       "3      20.0\n",
-       "4      27.0\n",
-       "       ... \n",
-       "995    30.0\n",
-       "996    29.0\n",
-       "997    24.0\n",
-       "998    26.0\n",
-       "999    18.0\n",
+       "0      254.0\n",
+       "1      323.0\n",
+       "2      313.0\n",
+       "3      270.0\n",
+       "4      302.0\n",
+       "       ...  \n",
+       "995    315.0\n",
+       "996    307.0\n",
+       "997    285.0\n",
+       "998    294.0\n",
+       "999    262.0\n",
        "Name: date, Length: 1000, dtype: float64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
        "4    23   11    0  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1947,7 @@
        "4    23   11    0  23:11:00  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1967,27 +1967,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     2684 days 15:12:16.791379\n",
-       "1     2548 days 16:22:16.791379\n",
-       "2     3034 days 15:41:16.791379\n",
-       "3     2336 days 15:31:16.791379\n",
-       "4     2733 days 16:51:16.791379\n",
+       "0     3962 days 15:02:32.423669\n",
+       "1     3826 days 16:12:32.423669\n",
+       "2     4312 days 15:31:32.423669\n",
+       "3     3614 days 15:21:32.423669\n",
+       "4     4011 days 16:41:32.423669\n",
        "                 ...           \n",
-       "995   3323 days 15:12:16.791379\n",
-       "996   2644 days 16:48:16.791379\n",
-       "997   3109 days 16:25:16.791379\n",
-       "998   3225 days 16:28:16.791379\n",
-       "999   2497 days 16:37:16.791379\n",
+       "995   4601 days 15:02:32.423669\n",
+       "996   3922 days 16:38:32.423669\n",
+       "997   4387 days 16:15:32.423669\n",
+       "998   4503 days 16:18:32.423669\n",
+       "999   3775 days 16:27:32.423669\n",
        "Name: date, Length: 1000, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,27 +1998,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      2.319523e+08\n",
-       "1      2.202061e+08\n",
-       "2      2.621941e+08\n",
-       "3      2.018863e+08\n",
-       "4      2.361919e+08\n",
+       "0      3.423710e+08\n",
+       "1      3.306248e+08\n",
+       "2      3.726127e+08\n",
+       "3      3.123049e+08\n",
+       "4      3.466105e+08\n",
        "           ...     \n",
-       "995    2.871619e+08\n",
-       "996    2.285021e+08\n",
-       "997    2.686767e+08\n",
-       "998    2.786993e+08\n",
-       "999    2.158006e+08\n",
+       "995    3.975806e+08\n",
+       "996    3.389207e+08\n",
+       "997    3.790953e+08\n",
+       "998    3.891179e+08\n",
+       "999    3.262193e+08\n",
        "Name: date, Length: 1000, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,27 +2064,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      64431.204664\n",
-       "1      61168.371331\n",
-       "2      72831.687998\n",
-       "3      56079.521331\n",
-       "4      65608.854664\n",
-       "           ...     \n",
-       "995    79767.204664\n",
-       "996    63472.804664\n",
-       "997    74632.421331\n",
-       "998    77416.471331\n",
-       "999    59944.621331\n",
+       "0       95103.042340\n",
+       "1       91840.209007\n",
+       "2      103503.525673\n",
+       "3       86751.359007\n",
+       "4       96280.692340\n",
+       "           ...      \n",
+       "995    110439.042340\n",
+       "996     94144.642340\n",
+       "997    105304.259007\n",
+       "998    108088.309007\n",
+       "999     90616.459007\n",
        "Name: date, Length: 1000, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2119,7 +2119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
