--- a/day38-missing-indicator/missing-indicator.ipynb
+++ b/day38-missing-indicator/missing-indicator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "4         0  35.0   8.0500"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "876  20.0   9.8458"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "       [ 29.78590426,  25.925     ]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "0.6145251396648045"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
        "0.6312849162011173"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,9 +1638,9 @@
     "\n",
     "clf = LogisticRegression()\n",
     "\n",
-    "clf.fit(X_train_trf2,y_train)\n",
+    "clf.fit(X_train,y_train)\n",
     "\n",
-    "y_pred = clf.predict(X_test_trf2)\n",
+    "y_pred = clf.predict(X_test)\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "accuracy_score(y_test,y_pred)"
@@ -1670,7 +1670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
