--- a/day40-iterative-imputer/step-by-step.ipynb
+++ b/day40-iterative-imputer/step-by-step.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "44        2.0            15.0              3.0     7.0"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "44        2.0            15.0              3.0"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,18 +192,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Dark_Coder\\AppData\\Local\\Temp\\ipykernel_8156\\766688332.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.iloc[1,0] = np.nan\n",
+      "C:\\Users\\Dark_Coder\\AppData\\Local\\Temp\\ipykernel_8156\\766688332.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.iloc[3,1] = np.nan\n",
+      "C:\\Users\\Dark_Coder\\AppData\\Local\\Temp\\ipykernel_8156\\766688332.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.iloc[-1,-1] = np.nan\n"
+     ]
+    }
+   ],
    "source": [
-    "df.iloc[1,0] = np.NaN\n",
-    "df.iloc[3,1] = np.NaN\n",
-    "df.iloc[-1,-1] = np.NaN"
+    "df.iloc[1,0] = np.nan\n",
+    "df.iloc[3,1] = np.nan\n",
+    "df.iloc[-1,-1] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +298,7 @@
        "44        2.0            15.0              NaN"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +397,7 @@
        "44       2.00           15.00            29.25"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +482,7 @@
        "44        2.0           15.00            29.25"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,14 +491,14 @@
     "# Remove the col1 imputed value\n",
     "df1 = df0.copy()\n",
     "\n",
-    "df1.iloc[1,0] = np.NaN\n",
+    "df1.iloc[1,0] = np.nan\n",
     "\n",
     "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +559,7 @@
        "44           15.00            29.25"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +586,7 @@
        "Name: R&D Spend, dtype: float64"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,16 +598,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Dark_Coder\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([23.14158651])"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2112,6 +2142,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8.        , 15.        , 30.        ],\n",
+       "       [26.7182251 ,  5.        , 20.        ],\n",
+       "       [15.        , 10.        , 41.        ],\n",
+       "       [12.        , 13.02245793, 26.        ],\n",
+       "       [ 2.        , 15.        , 70.6926375 ]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "clf = LinearRegression()\n",
+    "\n",
+    "imputer = IterativeImputer(clf, max_iter=10)\n",
+    "\n",
+    "imputer.fit_transform(df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2134,7 +2205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
