--- a/day50-multiple-linear-regression/test.ipynb
+++ b/day50-multiple-linear-regression/test.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,8 +126,8 @@
     "        `self.weights` will represent the slope(s) of the regression line for each feature\n",
     "        `self.bias` will represent the intercept of the regression line\n",
     "        '''\n",
-    "        self.weights = None  # slope\n",
-    "        self.bias = None     # intercept\n",
+    "        self.coef_ = None  # slope\n",
+    "        self.intercept_ = None     # intercept\n",
     "\n",
     "    def fit(self, X_train, y_train):\n",
     "        # Convert X_train to a NumPy array if it’s a Series, then reshape if one-dimensional\n",
@@ -139,8 +139,8 @@
     "\n",
     "        # Calculate weights (betas) using the normal equation: (X^T * X)^-1 * X^T * y\n",
     "        betas = np.linalg.inv(X_train.T @ X_train) @ X_train.T @ y_train\n",
-    "        self.bias = betas[0]       # First value is the intercept\n",
-    "        self.weights = betas[1:]   # Remaining values are the slopes\n",
+    "        self.intercept_ = betas[0]       # First value is the intercept\n",
+    "        self.coef_ = betas[1:]   # Remaining values are the slopes\n",
     "\n",
     "    def predict(self, X_test):\n",
     "        # Convert X_test to a NumPy array if it’s a Series, then reshape if one-dimensional\n",
@@ -149,7 +149,7 @@
     "        \n",
     "        \n",
     "        # Predict y using the model: y_pred = X_test @ weights + bias\n",
-    "        y_pred = X_test @ self.weights + self.bias\n",
+    "        y_pred = X_test @ self.coef_ + self.intercept_\n",
     "        print(y_pred)\n",
     "        return y_pred\n"
    ]
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,12 +262,12 @@
     }
    ],
    "source": [
-    "lr.weights"
+    "lr.coef_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "lr.bias"
+    "lr.intercept_"
    ]
   },
   {
