--- a/day52-types-of-gradient-descent/Test.ipynb
+++ b/day52-types-of-gradient-descent/Test.ipynb
@@ -619,7 +619,7 @@
     "\n",
     "    def fit(self, X_train, y_train):\n",
     "        # Initialize coefficients to zeros\n",
-    "        self.coef_ = np.zeros(X_train.shape[1])\n",
+    "        self.coef_ = np.ones(X_train.shape[1])\n",
     "\n",
     "        # Perform gradient descent\n",
     "        for _ in range(self.epochs):\n",
@@ -634,11 +634,7 @@
     "            self.intercept_ -= self.lr * intercept_gradient\n",
     "            self.coef_ -= self.lr * coef_gradient\n",
     "\n",
-    "        print(\"Intercept:\", self.intercept_)\n",
-    "        print(\"Coefficients:\", self.coef_)\n",
-    "\n",
     "    def predict(self, X_test):\n",
-    "        # Make predictions using the updated coefficients\n",
     "        return (X_test @ self.coef_) + self.intercept_\n"
    ]
   },
