--- a/day23 Feature Engineering/1.ipynb
+++ b/day23 Feature Engineering/1.ipynb
@@ -76,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RAG",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
